<resources>
    <string name="app_name">BuildItBigger</string>
    <string name="action_settings">Settings</string>

    <!--messages-->
    <string name="welcome_message">Welcome to Joke World!</string>
    <string name="next_message">Next joke ...</string>

    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->

    <!--banner test-->
    <string name="banner_ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_size">BANNER</string>
    <!--interstitial test-->
    <string name="inter_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--buttons-->
    <string name="button_get">GET THE JOKE</string>
    <string name="button_back">BACK</string>

    <!--images-->
    <string name="divider_descr">divider</string>

    <!--test-->
    <string name="test_request">test</string>
    <string name="test_respond">test joke received</string>

    <string name="test_message">Endpont Test for %1$s passed</string>

</resources>
