...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_h1">

        <TextView
            android:id="@+id/joke_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackText"
            android:gravity="center_horizontal"
            android:padding="@dimen/text_padding"
            android:textAppearance="@style/TextLargeS" />
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/joke_button"
        style="@style/button_salad_wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/frame_margin_large"
        android:text="@string/button_back"
...
